论文相关，接口调试完成

--- a/Star/Base.lproj/Main.storyboard
+++ b/Star/Base.lproj/Main.storyboard
@@ -1191,6 +1191,6 @@
         <image name="tab_scan_n" width="20" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="CHf-vd-GKF"/>
+        <segue reference="oip-T5-H2B"/>
     </inferredMetricsTieBreakers>
 </document>
