--- a/Star/Base.lproj/Main.storyboard
+++ b/Star/Base.lproj/Main.storyboard
@@ -559,7 +559,7 @@
         <!--Smart View Controller-->
         <scene sceneID="xO3-NK-PXK">
             <objects>
-                <viewController storyboardIdentifier=" SmartViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Mpz-9a-0dd" customClass="SmartViewController" customModule="Star" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="Mpz-9a-0dd" customClass="SmartViewController" customModule="Star" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xWN-gh-iPH"/>
                         <viewControllerLayoutGuide type="bottom" id="xdh-pb-vik"/>
@@ -947,7 +947,7 @@
         <!-- -->
         <scene sceneID="VRf-D0-xoC">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="904-1A-mGE" customClass="JXNavigationController" customModule="Star" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier=" SmartNvc" automaticallyAdjustsScrollViewInsets="NO" id="904-1A-mGE" customClass="JXNavigationController" customModule="Star" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" tag="1" title=" " id="bSS-M6-Pw7"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LAp-Qi-0Kv">
