--- a/Star/Main/View/Smart/SmartCell.xib
+++ b/Star/Main/View/Smart/SmartCell.xib
@@ -6,20 +6,24 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="SmartCell" customModule="Star" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="105" id="KGk-i7-Jjw" customClass="SmartCell" customModule="Star" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="331" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="331" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="331" height="104.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Oi-zu-3lf">
-                        <rect key="frame" x="10" y="10" width="311" height="109.5"/>
+                        <rect key="frame" x="10" y="10.5" width="311" height="95"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="1Oi-zu-3lf" secondAttribute="height" multiplier="355:109" id="FSX-60-A6I"/>
+                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
@@ -33,7 +37,7 @@
             <connections>
                 <outlet property="SmartImageView" destination="1Oi-zu-3lf" id="AH0-H6-Pb1"/>
             </connections>
-            <point key="canvasLocation" x="-164" y="4"/>
+            <point key="canvasLocation" x="-164.5" y="-3.5"/>
         </tableViewCell>
     </objects>
 </document>
