--- a/Star/Main/View/Task/TaskReusableView.xib
+++ b/Star/Main/View/Task/TaskReusableView.xib
@@ -13,24 +13,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="TaskReusableView" customModule="Star" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="341" height="329"/>
+            <rect key="frame" x="0.0" y="0.0" width="343" height="380"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tCd-gj-c8a">
-                    <rect key="frame" x="0.0" y="0.0" width="341" height="329"/>
+                    <rect key="frame" x="0.0" y="0.0" width="343" height="380"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nOM-z5-Hhn">
-                            <rect key="frame" x="0.0" y="0.0" width="341" height="269"/>
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="259"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgWisdom" translatesAutoresizingMaskIntoConstraints="NO" id="oLi-aJ-BeI">
-                                    <rect key="frame" x="146" y="108" width="50" height="50"/>
+                                    <rect key="frame" x="147" y="108" width="50" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="2fg-CD-CaO"/>
                                         <constraint firstAttribute="width" secondItem="oLi-aJ-BeI" secondAttribute="height" id="6Kb-Xv-1rT"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="智慧值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FXc-Kq-BKg">
-                                    <rect key="frame" x="200.66666666666666" y="172" width="37" height="20"/>
+                                    <rect key="frame" x="201.66666666666666" y="172" width="37" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="sUw-Sy-Fox"/>
                                     </constraints>
@@ -39,7 +39,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5555" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0j4-Nh-QCT">
-                                    <rect key="frame" x="140.66666666666666" y="167" width="60" height="25"/>
+                                    <rect key="frame" x="141.66666666666666" y="167" width="60" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="i3J-xV-iIV"/>
                                     </constraints>
@@ -48,7 +48,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tel-Ag-ube">
-                                    <rect key="frame" x="130.66666666666666" y="207" width="80" height="20"/>
+                                    <rect key="frame" x="131.66666666666666" y="207" width="80" height="20"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="0DM-YY-Cqg"/>
@@ -56,7 +56,7 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfZ-5T-qm3">
-                                    <rect key="frame" x="130" y="207" width="80" height="20"/>
+                                    <rect key="frame" x="131" y="207" width="80" height="20"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <state key="normal" title="智慧记录">
                                         <color key="titleColor" red="0.99607843137254903" green="0.99607843137254903" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
@@ -83,7 +83,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YWv-8L-h6M">
-                            <rect key="frame" x="0.0" y="269" width="341" height="60"/>
+                            <rect key="frame" x="0.0" y="259" width="343" height="60"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArticle" translatesAutoresizingMaskIntoConstraints="NO" id="DEx-9G-By2">
                                     <rect key="frame" x="15" y="15" width="30" height="30"/>
@@ -99,7 +99,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="智慧值+0~20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Jd-TD-rwr">
-                                    <rect key="frame" x="251" y="23.666666666666686" width="75" height="14.333333333333336"/>
+                                    <rect key="frame" x="253" y="23.666666666666686" width="75" height="14.333333333333336"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" red="0.1176470588" green="0.38431372549999998" blue="0.80392156859999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -113,18 +113,56 @@
                                 <constraint firstItem="DEx-9G-By2" firstAttribute="centerY" secondItem="YWv-8L-h6M" secondAttribute="centerY" id="M9y-qM-nL9"/>
                                 <constraint firstItem="5Jd-TD-rwr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="elg-jN-6Jv" secondAttribute="trailing" constant="10" id="ZfO-Ew-9gX"/>
                                 <constraint firstItem="elg-jN-6Jv" firstAttribute="centerY" secondItem="DEx-9G-By2" secondAttribute="centerY" id="eJD-Ih-9yk"/>
+                                <constraint firstAttribute="height" constant="60" id="lMo-ld-jMc"/>
                                 <constraint firstItem="5Jd-TD-rwr" firstAttribute="centerY" secondItem="DEx-9G-By2" secondAttribute="centerY" id="x4U-Ws-oKb"/>
                             </constraints>
                         </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JSw-2w-NK2">
+                            <rect key="frame" x="0.0" y="320" width="343" height="60"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArticle" translatesAutoresizingMaskIntoConstraints="NO" id="9Mp-Zd-MN1">
+                                    <rect key="frame" x="15" y="15" width="30" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="hZi-bW-4YW"/>
+                                        <constraint firstAttribute="width" secondItem="9Mp-Zd-MN1" secondAttribute="height" id="xXy-Lb-Tau"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="智慧论文" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7C-52-PBT">
+                                    <rect key="frame" x="55" y="21.666666666666686" width="57.666666666666657" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" red="0.23137254900000001" green="0.26274509800000001" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="每天智慧值+2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Wh-kM-tUU">
+                                    <rect key="frame" x="251.66666666666666" y="23.666666666666686" width="76.333333333333343" height="14.333333333333336"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <color key="textColor" red="0.1176470588" green="0.38431372549999998" blue="0.80392156859999997" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="j7C-52-PBT" firstAttribute="leading" secondItem="9Mp-Zd-MN1" secondAttribute="trailing" constant="10" id="0ab-06-tGW"/>
+                                <constraint firstItem="j7C-52-PBT" firstAttribute="centerY" secondItem="9Mp-Zd-MN1" secondAttribute="centerY" id="9da-Xd-zgr"/>
+                                <constraint firstItem="2Wh-kM-tUU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="j7C-52-PBT" secondAttribute="trailing" constant="10" id="KXt-6g-h4J"/>
+                                <constraint firstItem="2Wh-kM-tUU" firstAttribute="centerY" secondItem="9Mp-Zd-MN1" secondAttribute="centerY" id="MEf-tO-HYn"/>
+                                <constraint firstItem="9Mp-Zd-MN1" firstAttribute="centerY" secondItem="JSw-2w-NK2" secondAttribute="centerY" id="Xey-Xa-UrS"/>
+                                <constraint firstItem="9Mp-Zd-MN1" firstAttribute="leading" secondItem="JSw-2w-NK2" secondAttribute="leading" constant="15" id="hhH-0U-guI"/>
+                                <constraint firstAttribute="trailing" secondItem="2Wh-kM-tUU" secondAttribute="trailing" constant="15" id="o9M-ei-4k2"/>
+                            </constraints>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="YWv-8L-h6M" secondAttribute="bottom" id="5hg-fM-WtJ"/>
-                        <constraint firstAttribute="bottom" secondItem="nOM-z5-Hhn" secondAttribute="bottom" constant="60" id="EnA-ww-Qq2"/>
-                        <constraint firstItem="YWv-8L-h6M" firstAttribute="top" secondItem="nOM-z5-Hhn" secondAttribute="bottom" id="MX9-XP-raH"/>
-                        <constraint firstItem="YWv-8L-h6M" firstAttribute="leading" secondItem="tCd-gj-c8a" secondAttribute="leading" id="S3a-VD-KEc"/>
-                        <constraint firstAttribute="trailing" secondItem="YWv-8L-h6M" secondAttribute="trailing" id="Ti0-e2-CIb"/>
+                        <constraint firstAttribute="bottom" secondItem="JSw-2w-NK2" secondAttribute="bottom" id="0DA-mg-RtV"/>
+                        <constraint firstItem="YWv-8L-h6M" firstAttribute="top" secondItem="nOM-z5-Hhn" secondAttribute="bottom" id="4JT-m2-xyo"/>
+                        <constraint firstItem="JSw-2w-NK2" firstAttribute="top" secondItem="YWv-8L-h6M" secondAttribute="bottom" constant="1" id="COo-9j-d66"/>
+                        <constraint firstItem="YWv-8L-h6M" firstAttribute="leading" secondItem="tCd-gj-c8a" secondAttribute="leading" id="Gk7-cy-LSS"/>
+                        <constraint firstAttribute="trailing" secondItem="YWv-8L-h6M" secondAttribute="trailing" id="HZT-5g-ChE"/>
+                        <constraint firstItem="JSw-2w-NK2" firstAttribute="height" secondItem="YWv-8L-h6M" secondAttribute="height" id="VWj-cp-Yxr"/>
+                        <constraint firstItem="JSw-2w-NK2" firstAttribute="leading" secondItem="tCd-gj-c8a" secondAttribute="leading" id="cQR-Jx-ZN4"/>
                         <constraint firstAttribute="trailing" secondItem="nOM-z5-Hhn" secondAttribute="trailing" id="irM-Zn-zPw"/>
+                        <constraint firstAttribute="trailing" secondItem="JSw-2w-NK2" secondAttribute="trailing" id="l9o-fD-qW2"/>
                         <constraint firstItem="nOM-z5-Hhn" firstAttribute="top" secondItem="tCd-gj-c8a" secondAttribute="top" id="wWs-U6-VMt"/>
                         <constraint firstItem="nOM-z5-Hhn" firstAttribute="leading" secondItem="tCd-gj-c8a" secondAttribute="leading" id="woE-5l-hMQ"/>
                     </constraints>
@@ -138,13 +176,14 @@
             </constraints>
             <connections>
                 <outlet property="bottomBackgroundView" destination="YWv-8L-h6M" id="l1Y-Jn-KQV"/>
+                <outlet property="bottomBackgroundView1" destination="JSw-2w-NK2" id="cwO-nw-Hdg"/>
                 <outlet property="klLable" destination="0j4-Nh-QCT" id="1vP-5c-sEJ"/>
                 <outlet property="recordBackView" destination="tel-Ag-ube" id="qIR-Xm-Dwf"/>
                 <outlet property="recordButton" destination="cfZ-5T-qm3" id="XCx-yc-tpM"/>
                 <outlet property="topBackgroundView" destination="nOM-z5-Hhn" id="bst-cd-4lC"/>
                 <outlet property="topConstraint" destination="Kdh-d9-PY0" id="k1q-42-gbo"/>
             </connections>
-            <point key="canvasLocation" x="36.5" y="-53.5"/>
+            <point key="canvasLocation" x="37.5" y="-28"/>
         </collectionReusableView>
     </objects>
     <resources>
